[gd_scene load_steps=31 format=3 uid="uid://bkgijybqxmxd8"]

[ext_resource type="Script" path="res://player_ship/ship.gd" id="1_mqtmi"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_ehosm"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="2_mw50h"]
[ext_resource type="Texture2D" uid="uid://hy1tjru58y5e" path="res://assets/flip_planes.png" id="3_grnp0"]
[ext_resource type="Texture2D" uid="uid://bqwubxqwb7dsi" path="res://assets/planes.png" id="3_ovjyd"]
[ext_resource type="Script" path="res://components/move_input_component.gd" id="3_xfx7j"]
[ext_resource type="Resource" uid="uid://bo3ig3arec1h6" path="res://player_ship/ship_move_stats.tres" id="4_dgl6u"]
[ext_resource type="Script" path="res://components/position_clamp_component.gd" id="5_vqpx2"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="7_26x81"]
[ext_resource type="PackedScene" uid="uid://3c0cr3714r4k" path="res://projectiles/laser.tscn" id="8_ypby4"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="9_72otb"]
[ext_resource type="Texture2D" uid="uid://cmfx7uwiptxam" path="res://assets/ship_flame.png" id="10_svgp4"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="12_76ubl"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="13_6ric4"]
[ext_resource type="PackedScene" uid="uid://c7nmpf2186t1j" path="res://effects/explosion_effect.tscn" id="14_b7pps"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="14_tctej"]
[ext_resource type="AudioStream" uid="uid://brhxk3b8tymrd" path="res://sounds/laser_sound.wav" id="16_skfy5"]
[ext_resource type="Script" path="res://components/variable_pitch_audio_stream_player.gd" id="16_u0wy7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_53gwr"]
atlas = ExtResource("3_grnp0")
region = Rect2(0, 0, 483, 407)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtowf"]
atlas = ExtResource("3_ovjyd")
region = Rect2(2500, 0, 500, 418)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfegl"]
atlas = ExtResource("3_grnp0")
region = Rect2(0, 425, 447, 408)

[sub_resource type="SpriteFrames" id="SpriteFrames_h24ni"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_53gwr")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtowf")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfegl")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xn5im"]
atlas = ExtResource("10_svgp4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_36k3p"]
atlas = ExtResource("10_svgp4")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7ayw"]
atlas = ExtResource("10_svgp4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nitdh"]
atlas = ExtResource("10_svgp4")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4htw3"]
atlas = ExtResource("10_svgp4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_osne7"]
atlas = ExtResource("10_svgp4")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_u31ju"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn5im")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36k3p")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7ayw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nitdh")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4htw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osne7")
}],
"loop": true,
"name": &"center",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c0wvo"]
size = Vector2(10, 15)

[node name="Ship" type="RigidBody2D"]
script = ExtResource("1_mqtmi")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("2_mw50h")

[node name="Anchor" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Anchor"]
position = Vector2(0, -4.76837e-07)
scale = Vector2(0.0698408, 0.0593762)
sprite_frames = SubResource("SpriteFrames_h24ni")
animation = &"center"
autoplay = "center"

[node name="FlameAnimatedSprite" type="AnimatedSprite2D" parent="Anchor"]
unique_name_in_owner = true
position = Vector2(-1, 20)
sprite_frames = SubResource("SpriteFrames_u31ju")
animation = &"bank_left"
autoplay = "center"

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_ehosm")
actor = NodePath("..")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("3_xfx7j")
move_stats = ExtResource("4_dgl6u")
move_component = NodePath("../MoveComponent")

[node name="PositionClampComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_vqpx2")
actor = NodePath("..")

[node name="LeftMuzzle" type="Marker2D" parent="."]
position = Vector2(-5, -4)

[node name="LeftMuzzle2" type="Marker2D" parent="."]
position = Vector2(-6.9437, -0.744886)
rotation = 2.19482

[node name="RightMuzzle" type="Marker2D" parent="."]
position = Vector2(5, -4)

[node name="RightMuzzle2" type="Marker2D" parent="."]
position = Vector2(6.94606, -0.546461)
rotation = -2.22217

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_26x81")
scene = ExtResource("8_ypby4")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("9_72otb")
sprite = NodePath("../Anchor")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_mask = 0
script = ExtResource("12_76ubl")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtboxComponent"]
position = Vector2(-1, -4)
polygon = PackedVector2Array(-8, 2, -3, -3, -3, -4, -1, -7, 1, -7, 3, -4, 3, -3, 8, 2, 8, 4, 5, 4, 12, 15, -12, 15, -5, 4, -8, 4)

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("13_6ric4")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="ExplosionSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_26x81")
scene = ExtResource("14_b7pps")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("14_tctej")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../ExplosionSpawnerComponent")

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_skfy5")
bus = &"Sounds"
script = ExtResource("16_u0wy7")
auto_play_with_variance = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1.5)
shape = SubResource("RectangleShape2D_c0wvo")

[node name="PowerUpTimer" type="Timer" parent="."]

[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
